--- a/client/src/styles/pages/intro.module.scss
+++ b/client/src/styles/pages/intro.module.scss
@@ -8,27 +8,28 @@
   text-align: center;
   background: linear-gradient(rgba(174, 220, 232, 1), rgba(235, 249, 253, 1));
   height: 100%;
+  color: $dark-blue;
 }
 
+.Content {
+  margin: 2rem;
+  margin-top: 7rem;
+}
+
+
 .Content h1 {
-  margin-top: 10rem;
-  padding-left: 1rem;
-  padding-right: 1rem;
   font-size: $font-large;
   line-height: 1.8rem;
-  color: $dark-blue;
 }
 
 .Content p {
-  padding-left: 1rem;
-  padding-right: 1rem;
   font-size: $font-medium;
   line-height: 1.8rem;
-  color: $dark-blue;
 }
 
 .Badges {
   margin-bottom: 2rem;
   margin-top: 1rem;
   height: 50%;
+  width: 80%;
 }
